(fix) fix a typo

--- a/Code/快速排序.md
+++ b/Code/快速排序.md
@@ -7,7 +7,7 @@ package main
 import "fmt"
 
 // this function needs a slice instead of a list
-func paritition(slice []int, low, high int) int {
+func partition(slice []int, low, high int) int {
 	pivot := slice[low]
 
 	for low < high {
@@ -27,7 +27,7 @@ func paritition(slice []int, low, high int) int {
 
 func QuickSort(slice []int, low, high int) {
 	if low < high {
-		pivot := paritition(slice, low, high)
+		pivot := partition(slice, low, high)
 		QuickSort(slice, low, pivot-1)
 		QuickSort(slice, pivot+1, high)
 	}
